@@ -175,11 +175,12 @@ public class KnockoutFelixAriesIT {
     private static Class<?> browserClass;
     private static Object browserContext;
 
+    @SuppressWarnings("unchecked")
     @Factory public static Object[] compatibilityTests() throws Exception {
         Class<?> tck = loadOSGiClass(KnockoutTCK.class);
         Class<?> peer = loadOSGiClass(KnockoutFelixTCKImpl.class);
         // initialize the TCK
-        Callable<Class[]> inst = (Callable<Class[]>) peer.newInstance();
+        Callable<Class[]> inst = (Callable<Class[]>) peer.getConstructor().newInstance();
         
         Class[] arr = inst.call();
         for (int i = 0; i < arr.length; i++) {
